# prompt-composer

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING_GUIDE.md  build.rs  build.sh  publish.sh  pyproject.toml
core/: composition.rs  discovery.rs  lib.rs  loader.rs  modules.rs  python.rs  types.rs
docs/: api-design.md  architecture.md  modules.md
examples/: input-output-examples.md
node/: .gitignore  LICENSE  README.md  add-wrappers.js  fix-bindings.js  index.d.ts  index.js  package.json  test.js
node/prompts/: server_patterns.toml
plans/: migration-plan.md  prompt-inventory.md
prompts/behaviors/: tools.md
prompts/domains/: filesystem.md
prompts/tools/: desktop-commander.md
python/prompt_composer/: __init__.py
python/prompt_composer/prompts/behaviors/: reasoning.md
python/system_prompt_composer/: __init__.py
python/system_prompt_composer/prompts/behaviors/: planning.md  progress.md  tools.md
python/system_prompt_composer/prompts/domains/: analysis.md  programming.md  system.md
python/system_prompt_composer/prompts/tools/: desktop-commander.md
rust-api/: design.md
